# middleware

./: .gbs.conf  .gitignore  AUTHORS  CMakeLists.txt  Makefile  README.md  cert-svc-vcore.pc.in  device-policy-manager.manifest  interface-draft.md  klay.pc.in
cert-svc/examples/: CMakeLists.txt  signature-validator-since-4.0.cpp
etc/: CMakeLists.txt  cert-svc-db-upgrade.sh.in  cert-svc-disabled-certs-upgrade.sh.in  cert_svc_store_db.sql  initialize_store_db.sh
etc/db/: CMakeLists.txt  check_ca_bundle_digest.sh  initialize_store_db.sh
etc/upgrade/: 202.cert-svc-db-upgrade.sh.in  203.cert-svc-disabled-certs-upgrade.sh.in  242.cert-svc-db-upgrade.sh.in  243.cert-svc-disabled-certs-upgrade.sh.in  CMakeLists.txt  cert-svc-db-upgrade.sh.in  cert-svc-disabled-certs-upgrade.sh.in
libs/: CMakeLists.txt  administration.cpp  application.cpp  bluetooth.cpp  device-policy-manager.h  dpm.pc.in  ivi.cmake  krate.cpp  location.cpp  password.cpp  policy-client.cpp  policy-client.h  policy-context.hxx  restriction.cpp  security.cpp  storage.cpp  wearable.cmake  wifi.cpp
libs/dpm/: administration.cpp  application.cpp  bluetooth.cpp  client-handle.cpp  password.cpp  password.h  password_internal.h  restriction.cpp  restriction.h  security.cpp  security.h  storage.cpp  storage.h  wifi.cpp  zone.cpp  zone.h
libs/dsm/: CMakeLists.txt  dsm.pc.in  smack.cpp
libs/pil/: launchpad.cpp  logger.h  observer.h  packman.cpp  packman.h  policy-admin.cpp  policy-admin.h  policy-client.cpp  policy-client.h  policy-event-env.h  policy-event.cpp  policy-model.h  policy-storage.h
osquery/: CMakeLists.txt
osquery/config/: CMakeLists.txt  config_tests.cpp
osquery/core/: CMakeLists.txt  conversions.cpp  conversions.h  init.cpp  system.cpp  test_util.cpp  test_util.h
osquery/database/: CMakeLists.txt  db_handle_tests.cpp  results.cpp  results_tests.cpp
osquery/devtools/: CMakeLists.txt  printer.cpp  shell.cpp
osquery/dispatcher/: CMakeLists.txt  dispatcher.cpp  dispatcher.h  dispatcher_tests.cpp
osquery/distributed/: CMakeLists.txt
osquery/events/: CMakeLists.txt  events.cpp  events_database_tests.cpp  events_tests.cpp
osquery/extensions/: CMakeLists.txt  extensions.cpp  extensions_tests.cpp  interface.h
osquery/filesystem/: CMakeLists.txt  filesystem_tests.cpp
osquery/logger/: CMakeLists.txt  logger.cpp  logger_tests.cpp
osquery/main/: lib.cpp  tests.cpp
osquery/manager/: CMakeLists.txt  manager.cpp  manager_impl.cpp  manager_tests.cpp
osquery/notification/: CMakeLists.txt  notification.cpp  notification_tests.cpp
osquery/property/: CMakeLists.txt  property.cpp  property_tests.cpp
osquery/registry/: CMakeLists.txt  registry.cpp  registry_tests.cpp
osquery/scheduler/: CMakeLists.txt
osquery/sql/: CMakeLists.txt  sql.cpp
osquery/tables/: CMakeLists.txt
osquery/tizen/: CMakeLists.txt
pil/: CMakeLists.txt  dpm-pil.pc.in  error.h  packman.cpp  policy-client.cpp  policy-client.h  policy-context.h  policy-event-env.h  policy-event.cpp  policy-event.h  policy-model.h  status.h
plugins/bluetooth/: CMakeLists.txt  bluetooth-test.cpp  bluetooth.cpp  bluetooth.hpp
plugins/wifi/: CMakeLists.txt  wifi-test.cpp  wifi.cpp  wifi.hpp
server/: CMakeLists.txt  administration.cpp  application.cpp  bluetooth.cpp  client-manager.cpp  client-manager.h  common.cmake  datasource.h  db-schema.h  ivi.cmake  krate.cpp  launchpad.cpp  location.cpp  logger.h  main.cpp  observer.h  packman.cpp  packman.h  password-manager.cpp  password-manager.h  password.cpp  plugin.cpp  plugin.h  policy-builder.h  policy-manager.cpp  policy-manager.h  policy-model.cpp  policy-model.h  policy-storage.cpp  policy-storage.h  policy.cpp  policy.h  restriction.cpp  security.cpp  server.cpp  server.h  sql-backend.cpp  sql-backend.h  storage.cpp  syspopup-service.cpp  (+4 more)
server/dbus/: org.tizen.dpm.syspopup.conf  org.tizen.dpm.syspopup.service
server/dsm/: i_smack_log_collector.h  smack.cpp  smack_kernel_log_collector.cpp  smack_kernel_log_collector.h  smack_kernel_log_parser.cpp  smack_kernel_log_parser.h  smack_log_parser.cpp  smack_log_parser.h  smack_report_issuer.cpp  smack_report_issuer.h
server/systemd/: device-policy-manager.service.in  device-policy-manager.socket  device-policy-syspopup.service.in  org.tizen.dpm.syspopup.service.in
specs/: CMakeLists.txt  users.table
specs/tizen/: bluetooth.table  bluetooth_policy.table  policy.table  policy_admin.table  usb_policy.table  wifi_policy.table
src/: CMakeLists.txt  api.cpp  certificate.cpp  certificate.hxx  cgroup.cpp  environment.hxx  error.cpp  eventfd.cpp  exception.cpp  exception.hxx  file-descriptor.cpp  file-system.cpp  file-system.hxx  file-user.cpp  filesystem.cpp  init-lib.cpp  logic.cpp  logic.hxx  macros.hxx  mainloop.cpp  namespace.cpp  pam.cpp  process.cpp  testbench.cpp  thread-pool.cpp  trust-anchor.cpp
src/apix/: CMakeLists.txt
src/audit/: audit-trail.cpp  console-sink.cpp  dlog-sink.cpp  logger-core.cpp  logger.cpp  null-sink.cpp
src/auth/: group.cpp  user.cpp
src/cert-svc/: ccert.h  cinstance.h
src/client/: client-password-admin.cpp  client-password.cpp
src/common/: policy.cpp
src/db/: column.cpp  connection.cpp  statement.cpp
src/dbus/: connection.cpp  error.cpp  introspection.cpp  signal.cpp  variant.cpp
src/include/: auth-passwd-admin.h  auth-passwd-policy-types.h  auth-passwd.h
systemd/: CMakeLists.txt  auth-fw.service.in  auth-fw.target  cert-checker.service.in  cert-checker.socket.in  cert-server.service.in  cert-server.socket.in  vist.socket
test/: CMakeLists.txt  auth.cpp  database.cpp  dbus.cpp  eventfd.cpp  exception.cpp  filesystem.cpp  logger.cpp  main.cpp  misc.cpp  proc.cpp  query-builder.cpp  rmi.cpp  xml.cpp
tests/: CMakeLists.txt  colour_log_formatter.cpp  colour_log_formatter.h  main.cpp  password.c  restriction.c  smack.c  test-admin.cpp  test-capi-installer.cpp  test-capi-launcher.cpp  test-certificate.cpp  test-client.cpp  test-curl.cpp  test-installer.cpp  test-launcher.cpp  test-pil.cpp  test-query.cpp  test-resource.hxx  test-sw-backend.cpp  test-util.cpp  test-util.hxx
(+1472 files in other folders)
